CREATE TABLE IF NOT EXISTS City (
    Name VARCHAR(100),
    Region VARCHAR(100),
    PRIMARY KEY (Name, Region)
);

CREATE TABLE IF NOT EXISTS Station (
    Name VARCHAR(100) PRIMARY KEY,
    Tracks INT,
    CityName VARCHAR(100),
    Region VARCHAR(100),
    FOREIGN KEY (CityName, Region) REFERENCES City(Name, Region)
);

CREATE TABLE IF NOT EXISTS Train (
    TrainNr INT PRIMARY KEY,
    Length INT,
    StartStationName VARCHAR(100),
    EndStationName VARCHAR(100),
    FOREIGN KEY (StartStationName) REFERENCES Station(Name),
    FOREIGN KEY (EndStationName) REFERENCES Station(Name)
);

CREATE TABLE IF NOT EXISTS Connection (
    FromStation VARCHAR(100),
    ToStation VARCHAR(100),
    TrainNr INT,
    Departure TIMESTAMP,
    Arrival TIMESTAMP,
    PRIMARY KEY (FromStation, ToStation, TrainNr, Departure),
    FOREIGN KEY (FromStation) REFERENCES Station(Name),
    FOREIGN KEY (ToStation) REFERENCES Station(Name),
    FOREIGN KEY (TrainNr) REFERENCES Train(TrainNr)
);

-- Вставляем данные о городах
INSERT INTO City (Name, Region) VALUES
('Москва', 'Центральный'),
('Санкт-Петербург', 'Северо-Западный'),
('Тверь', 'Центральный'),
('Великий Новгород', 'Северо-Западный'),
('Казань', 'Приволжский'),
('Архангельск', 'Северо-Западный'),
('Владивосток', 'Дальневосточный'),
('Астрахань', 'Южный'),
('Сочи', 'Южный');

-- Вставляем данные о станциях
INSERT INTO Station (Name, Tracks, CityName, Region) VALUES
('Москва-Октябрьская', 10, 'Москва', 'Центральный'),
('Ленинградский вокзал', 8, 'Москва', 'Центральный'),
('Московский вокзал', 12, 'Санкт-Петербург', 'Северо-Западный'),
('Тверь-Центральная', 6, 'Тверь', 'Центральный'),
('Новгород-на-Волхове', 4, 'Великий Новгород', 'Северо-Западный'),
('Казань-Пассажирская', 8, 'Казань', 'Приволжский'),
('Архангельск-Город', 5, 'Архангельск', 'Северо-Западный'),
('Владивосток-Главный', 6, 'Владивосток', 'Дальневосточный'),
('Астрахань-Пассажирская', 4, 'Астрахань', 'Южный'),
('Сочи', 4, 'Сочи', 'Южный');

-- Вставляем данные о поездах
INSERT INTO Train (TrainNr, Length, StartStationName, EndStationName) VALUES
(101, 10, 'Ленинградский вокзал', 'Московский вокзал'),
(102, 8, 'Ленинградский вокзал', 'Тверь-Центральная'),
(103, 12, 'Тверь-Центральная', 'Московский вокзал'),
(104, 10, 'Москва-Октябрьская', 'Тверь-Центральная'),
(105, 6, 'Тверь-Центральная', 'Новгород-на-Волхове'),
(106, 15, 'Казань-Пассажирская', 'Архангельск-Город'),
(107, 20, 'Владивосток-Главный', 'Сочи'),
(108, 12, 'Казань-Пассажирская', 'Московский вокзал'),
(109, 10, 'Московский вокзал', 'Архангельск-Город'),
(120, 15, 'Казань-Пассажирская', 'Астрахань-Пассажирская'),
(121, 14, 'Казань-Пассажирская', 'Ленинградский вокзал'),
(122, 13, 'Ленинградский вокзал', 'Астрахань-Пассажирская');

-- Вставляем данные о соединениях

-- Прямые рейсы Москва-Тверь
INSERT INTO Connection (FromStation, ToStation, TrainNr, Departure, Arrival) VALUES
('Ленинградский вокзал', 'Тверь-Центральная', 102, '2024-03-10 08:00:00', '2024-03-10 10:30:00'),
('Москва-Октябрьская', 'Тверь-Центральная', 104, '2024-03-10 07:00:00', '2024-03-10 09:30:00');

-- Прямой рейс Москва-Санкт-Петербург
INSERT INTO Connection (FromStation, ToStation, TrainNr, Departure, Arrival) VALUES
('Ленинградский вокзал', 'Московский вокзал', 101, '2024-03-10 12:00:00', '2024-03-10 18:30:00');

-- Рейсы с пересадкой Москва-Тверь-Санкт-Петербург
INSERT INTO Connection (FromStation, ToStation, TrainNr, Departure, Arrival) VALUES
('Тверь-Центральная', 'Московский вокзал', 103, '2024-03-10 11:00:00', '2024-03-10 14:30:00');

-- Рейсы с пересадкой Москва-Тверь-Санкт-Петербург в разные дни
INSERT INTO Connection (FromStation, ToStation, TrainNr, Departure, Arrival) VALUES
('Ленинградский вокзал', 'Тверь-Центральная', 102, '2024-03-10 20:00:00', '2024-03-10 22:30:00'),
('Тверь-Центральная', 'Московский вокзал', 103, '2024-03-11 08:00:00', '2024-03-11 11:30:00');

-- Маршрут Москва-Санкт-Петербург с пересадкой в Твери (подходит под условия запроса)
INSERT INTO Connection (FromStation, ToStation, TrainNr, Departure, Arrival) VALUES
('Ленинградский вокзал', 'Тверь-Центральная', 102, '2024-03-15 08:00:00', '2024-03-15 10:30:00'),
('Тверь-Центральная', 'Московский вокзал', 103, '2024-03-15 11:00:00', '2024-03-15 14:30:00');

-- Маршрут Москва-Санкт-Петербург с пересадкой в Твери (не подходит, прибытие на следующий день)
INSERT INTO Connection (FromStation, ToStation, TrainNr, Departure, Arrival) VALUES
('Ленинградский вокзал', 'Тверь-Центральная', 102, '2024-03-16 22:00:00', '2024-03-16 23:59:59'),
('Тверь-Центральная', 'Московский вокзал', 103, '2024-03-17 00:30:00', '2024-03-17 04:00:00');

-- Маршрут Казань-Архангельск (не должен попасть в результат, т.к. не Москва-Петербург)
INSERT INTO Connection (FromStation, ToStation, TrainNr, Departure, Arrival) VALUES
('Казань-Пассажирская', 'Ленинградский вокзал', 108, '2024-03-18 10:00:00', '2024-03-18 18:00:00'),
('Ленинградский вокзал', 'Архангельск-Город', 109, '2024-03-18 19:00:00', '2024-03-18 23:59:59');

-- Маршрут Владивосток-Сочи (не должен попасть в результат)
INSERT INTO Connection (FromStation, ToStation, TrainNr, Departure, Arrival) VALUES
('Владивосток-Главный', 'Сочи', 107, '2024-03-20 08:00:00', '2024-03-22 20:00:00');

-- Дополнительный маршрут Москва-Санкт-Петербург с пересадкой в Твери (подходит под условия запроса)
INSERT INTO Connection (FromStation, ToStation, TrainNr, Departure, Arrival) VALUES
('Москва-Октябрьская', 'Тверь-Центральная', 104, '2024-03-25 07:00:00', '2024-03-25 09:30:00'),
('Тверь-Центральная', 'Московский вокзал', 103, '2024-03-25 10:00:00', '2024-03-25 13:30:00');

-- Маршрут Москва-Великий Новгород (не должен попасть в результат, т.к. не Санкт-Петербург)
INSERT INTO Connection (FromStation, ToStation, TrainNr, Departure, Arrival) VALUES
('Ленинградский вокзал', 'Тверь-Центральная', 102, '2024-03-30 08:00:00', '2024-03-30 10:30:00'),
('Тверь-Центральная', 'Новгород-на-Волхове', 105, '2024-03-30 11:00:00', '2024-03-30 14:30:00');

-- Маршрут Казань-Москва-Санкт-Петербург-Астрахань (в один день)
INSERT INTO Connection (FromStation, ToStation, TrainNr, Departure, Arrival) VALUES
('Казань-Пассажирская', 'Ленинградский вокзал', 121, '2024-04-05 00:01:00', '2024-04-05 08:00:00'),
('Ленинградский вокзал', 'Московский вокзал', 101, '2024-04-05 09:00:00', '2024-04-05 13:00:00'),
('Московский вокзал', 'Астрахань-Пассажирская', 122, '2024-04-05 14:00:00', '2024-04-05 23:59:00');